frontend_tests/negative/defer_builtin_result/cmd/app/main.go
package main

func main() {
	values := []int{1}
	defer len(values)
}
